# config/swagger.yaml
@@ -35,21 +35,42 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
   /payment/returnResult:
-    x-swagger-router-controller: Checksum payment result
+    x-swagger-router-controller: Receiving payment result
     get:
-      description: Receive payment result
-      operationId: receivePaymentResult
+      description: The url which payment provider will redirect to after payment finished
+      operationId: receivingPaymentResult
       consumes:
         - application/json
       produces:
         - application/json
       responses:
         '200':
+          description: Redirect to redirect_url from payment creating api
+  /payment/checkTrans:
+    x-swagger-router-controller: Check payment transaction by request id
+    get:
+      description: Query payment transaction
+      operationId: checkPaymentTransByRequestId
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: request_id
+          required: true
+          type: string
+        - in: query
+          name: reference_id
+          type: string
+          required: true
+      responses:
+        '200':
           description: Success
           schema:
             type: array
             items:
-              $ref: '#/definitions/PaymentResponse'
+              $ref: '#/definitions/CheckTransReponse'
         default:
           description: Error Occured
           schema:
@@ -64,9 +85,14 @@ parameters:
 definitions:
   PaymentRequest:
     required:
+      - request_id
       - bank_code
       - total_amount
+      - redirect_url
     properties:
+      request_id:
+        type: string
+        example: asfass112343
       bank_code:
         type: string
         example: NCB
@@ -75,19 +101,59 @@ definitions:
         type: integer
         example: 100000
         description: Total payment amount
+      redirect_url:
+        type: string
+        example: 'http://example.ononpay.com/redirect_url'
+        description: The url will be redirected after a payment finished.
   PaymentResponse:
     required:
       - reference_id
+      - request_id
+      - status
+      - redirect_url
     properties:
       reference_id:
         type: string
-        example: 123432we12reewer322
-        description: The reference id which is linked to a payment
-  ErrorResponse:
-    required:
-      - code
-    properties:
-      code:
+        example: fdd2dab0-790c-4d8e-86e6-0c34e27c35c5
+        description: The id is generated by service
+      request_id:
         type: string
+        example: asfass112343
+      redirect_url:
+        type: string
+        example: 'http://123pay.com'
+      status:
+        type: string
+        example: SUCCESS|PENDING|FAIL
       message:
         type: string
+        example: Message if status is FAIL
+  CheckTransReponse:
+    required:
+      - reference_id
+      - request_id
+      - status
+    properties:
+      reference_id:
+        type: string
+        example: fdd2dab0-790c-4d8e-86e6-0c34e27c35c5
+        description: The id is generated by service
+      request_id:
+        type: string
+        example: asfass112343
+      status:
+        type: string
+        example: SUCCESS|PENDING|FAIL
+      message:
+        type: string
+        example: Message if status is FAIL
+  ErrorResponse:
+    required:
+      - status
+    properties:
+      status:
+        type: string
+        example: FAIL
+      message:
+        type: string
+        example: Unknow error
